# sudokusolver

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main.cpp  reader.cpp  reader.h  solver  solver.cpp  solver.h
headers/: Makefile  cmake_install.cmake  solver.hpp
source/: CMakeLists.txt  Makefile  cmake_install.cmake  reader.cpp  solver.cpp
sudokusolver/: main.cpp
sudokusolver.xcodeproj/: project.pbxproj
sudokusolver.xcodeproj/xcuserdata/maximiliannazarati.xcuserdatad/xcschemes/: xcschememanagement.plist
sudokusolver/parser/: parser.cpp  parser.hpp
test/: solverTest.cpp
